[package]
name = "qendercore-mqtt-adapter"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Standalone Rust MQTT adapter for the Qendercore inverter cloud"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
rumqttc = { version = "0.24", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
